# parameter-golf-baseline

./: .env.template  .gitignore  CLAUDE.md  CLUSTER.md  LOGGING.md  README.md  experiments_sharing.txt  local_attn_gram_ns.py  plan.md  plan_low_rank.md  program.md  pyproject.toml  record.py  record1_log_localattn.py.bak  train_gpt.py  train_gpt_exp.py  train_gpt_iter3.py  train_gpt_iter4.py  train_gpt_low_rank.py  train_gpt_mlx.py  train_gpt_sharing.py  train_mario.py  triton_kernels.py
outputs/: dashboard.html  report_sharing_experiments.md  report_sharing_experiments_round3.md
outputs/report/: spectron_architecture_sweep_report.md
reports/: commit.txt  plot_kernel_benchmark.py  reproducibility.md  triton_kernels_report_en.md
scripts/: baseline_vs_spectron_baseline.sh  baseline_vs_spectron_spectron.sh  bench_4xa100_control.sh  bench_4xa100_iter1.sh  bench_4xa100_iter2.sh  bench_4xa100_iter3.sh  bench_4xa100_iter4.sh  download_data.sh  kernel_bench.sh  share4_baseline.sh  share4_full_1p.sh  share4_mlp_both_1p.sh  share4_mlp_fc_1p.sh  share4_mlp_fc_2p.sh  share4_mlp_proj_1p.sh  share4_o_2pairs.sh  share4_o_3pairs.sh  share4_o_4pairs.sh  share4_o_mlp_fc_1p.sh  share4_o_q_1p.sh  share4_o_q_2p.sh  share4_q_1pair.sh  share4_q_2pairs.sh  share4_solo_o.sh  share4_solo_v.sh  share4_v_multi.sh  share4_v_o.sh  share4_v_o_low.sh  share_solo_v.sh  share_v_o.sh  share_v_o_low.sh  spectron_arch_sweep.sh  train_1xA100.sh  train_4xA100.sh  train_8xA100.sh
tools/: dashboard.py  generate_report_plots.py  golf_meta.py  launch_run.sh  plot_sharing.py  plot_sharing_round3.py
(+101 files in other folders)
