[project]
name = "parameter-golf"
version = "0.1.0"
description = "OpenAI Parameter Golf Challenge"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "tqdm",
    "torch",
    "huggingface-hub",
    "kernels",
    "setuptools",
    "typing-extensions==4.15.0",
    "datasets",
    "tiktoken",
    "sentencepiece",
    "triton>=3.6.0",
    "nvitop>=1.6.2",
    "plotly>=6.6.0",
    "rich>=14.3.3",
    "matplotlib>=3.10.8",
]
