[project]
name = "parameter-golf"
version = "0.1.0"
description = "OpenAI Parameter Golf Challenge"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "tqdm",
    "torch",
    "huggingface-hub",
    "kernels",
    "setuptools",
    "typing-extensions==4.15.0",
    "datasets",
    "tiktoken",
    "sentencepiece",
    "triton>=3.6.0",
    "nvitop>=1.6.2",
    "plotly>=6.6.0",
    "rich>=14.3.3",
    "flash-attn-3>=3.0.0",
    "zstandard>=0.25.0",
    "gram-newton-schulz",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
gram-newton-schulz = { git = "https://github.com/Dao-AILab/gram-newton-schulz.git" }
flash-attn-3 = { index = "pytorch-cu130" }
